--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,7 @@
               href="https://www.aljazeera.com/news/2016/6/17/moroccos-colonial-heritage-in-higher-education"
               target="_blank"
               rel="noopener noreferrer"
-              >Morocco's colonial heritage in higher education (Al Jazeera)</a
+              >Morocco’s colonial heritage in higher education (Al Jazeera)</a
             >
           </li>
           <li>
