--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
   </link>
 
-    <title>YAERIM GEN KWON</title>
+    <title><a href="/">YAERIM GEN KWON</a></title>
   </head>
   <body>
    
