--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
   </link>
 
-    <title><a href="/">YAERIM GEN KWON</a></title>
+    <title>YAERIM GEN KWON</title>
   </head>
   <body>
    
     <div class="header">
-      <h1 class="title">YAERIM GEN KWON</h1>
+      <h1 class="title"><a href="/">YAERIM GEN KWON</a></h1>
       <span class="menu-btn">&#9776;</span>
       <div class="navbar">
         <span class="close-btn">&times;</span>
