--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
       </head>
   <body>
     <div class="header">
-      <h1 class="title">YAERIM GEN KWON</h1>
+      <h1 class="title"><a href="/">YAERIM GEN KWON</a></h1>
       <span class="menu-btn">&#9776;</span>
       <div class="navbar">
         <span class="close-btn">&times;</span>
