--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           fellowships from AWP, Carleton College, Indiana University, and New
           York State Summer Writers Institute. In her former life, she worked in
           media in Seoul, San Francisco, and Rabat. She is working on her debut
-          novel titled Upward <i>Mobility</i>.
+          novel titled <i>Upward Mobility</i>.
         </p>
 
         <p class="details-paragraph"> <a href="Resume.docx" target="_blank" rel="noopener noreferrer" style="color: black;">View her full CV<a></p>
