--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <div class="contact">
       <div class="contact-info">
         <p>Gen is available for readings, panels, events, etc.</p>
-        <p>Contact Yaerim (Gen) at yaerim.kwon@gmail.com</p>
+        <p>Contact at yaerim.kwon@gmail.com</p>
 
         <div class="social-icons">
           <a
