--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             ><i class="fab fa-twitter"></i
           ></a>
           <a
-            href="https://www.instagram.com/yaerimgenkwon/"
+            href="https://www.instagram.com/yaerimkwon/"
             target="_blank"
             rel="noopener noreferrer"
             ><i class="fab fa-instagram"></i
