--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
         <div class="social-icons">
           <a
-            href=" https://twitter.com/yaerimgenkwon"
+            href=" https://twitter.com/yaerimkwon"
             target="_blank"
             rel="noopener noreferrer"
             ><i class="fab fa-twitter"></i
