--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,13 @@
 
         <div class="social-icons">
           <a
-            href=" https://twitter.com/yaerimkwon"
+            href=" https://twitter.com/yaerimgenkwon"
             target="_blank"
             rel="noopener noreferrer"
             ><i class="fab fa-twitter"></i
           ></a>
           <a
-            href="https://www.instagram.com/yaerimkwon/"
+            href="https://www.instagram.com/yaerimgenkwon/"
             target="_blank"
             rel="noopener noreferrer"
             ><i class="fab fa-instagram"></i
