Update index.html -> removed changes related to title to act as a link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
    
     <div class="header">
-      <h1 class="title" id="titleH1">YAERIM GEN KWON</h1>
+      <h1 class="title">YAERIM GEN KWON</h1>
       <span class="menu-btn">&#9776;</span>
       <div class="navbar">
         <span class="close-btn">&times;</span>
