--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>YAERIM GEN KWON</title>
   </head>
   <body>
-   
+
     <div class="header">
       <h1 class="title">YAERIM GEN KWON</h1>
       <span class="menu-btn">&#9776;</span>
@@ -52,7 +52,7 @@
           fellowships from AWP, Carleton College, Indiana University, and New
           York State Summer Writers Institute. In her former life, she worked in
           media in Seoul, San Francisco, and Rabat. She is working on her debut
-          novel titled <i>Upward Mobility</i>.
+          novel titled Upward <i>Mobility</i>.
         </p>
 
         <p class="details-paragraph"> <a href="Resume.docx" target="_blank" rel="noopener noreferrer" style="color: black;">View her full CV<a></p>
