Update contact.html -> Added initial commits

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       </link>
-    
+
         <title>YAERIM GEN KWON</title>
       </head>
   <body>
@@ -35,7 +35,7 @@
     <div class="contact">
       <div class="contact-info">
         <p>Gen is available for readings, panels, events, etc.</p>
-        <p>Contact at yaerim.kwon@gmail.com</p>
+        <p>Contact Yaerim (Gen) at yaerim.kwon@gmail.com</p>
 
         <div class="social-icons">
           <a
