--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       </link>
-    
+
         <title>YAERIM GEN KWON</title>
       </head>
   <body>
@@ -48,7 +48,7 @@
               href="https://www.aljazeera.com/news/2016/6/17/moroccos-colonial-heritage-in-higher-education"
               target="_blank"
               rel="noopener noreferrer"
-              >Morocco’s colonial heritage in higher education (Al Jazeera)</a
+              >Morocco's colonial heritage in higher education (Al Jazeera)</a
             >
           </li>
           <li>
