--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<!-- adding a dummy comment due to hosting issues-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Ubuntu:wght@300&display=swap');
-    </style>
+    <link href='https://fonts.googleapis.com/css?family=EB Garamond' rel='stylesheet'>
     <link rel="shortcut icon" type="image/jpeg" href="4.jpeg">
     <link rel="apple-touch-icon" type="image/jpeg" href="4.jpeg">
     <link rel="stylesheet" href="site.css" />
@@ -20,7 +17,9 @@
   <body>
 
     <div class="header">
-      <h1 class="title">YAERIM GEN KWON</h1>
+      <a href="index.html" class="title-link">
+        <h1 class="title">YAERIM GEN KWON</h1>
+      </a>
       <span class="menu-btn">&#9776;</span>
       <div class="navbar">
         <span class="close-btn">&times;</span>
@@ -35,7 +34,7 @@
     <div class="content">
       <div class="flex-container">
         <div class="image">
-          <img src="img/4.jpeg" alt="YAERIM image" width="100%" />
+          <img src="img/4.jpeg" alt="YAERIM image" width="100%" loading="lazy"/>
         </div>
       </div>
       <div class="details">
@@ -53,10 +52,10 @@
           fellowships from AWP, Carleton College, Indiana University, and New
           York State Summer Writers Institute. In her former life, she worked in
           media in Seoul, San Francisco, and Rabat. She is working on her debut
-          novel titled Upward <i>Mobility</i>.
+          novel titled <i>Upward Mobility</i>.
         </p>
 
-        <p class="details-paragraph"> <a href="Resume.docx" target="_blank" rel="noopener noreferrer" style="color: black;">View her full CV<a></p>
+        <p class="details-paragraph"> <a href="YaerimCV2023July.pdf" target="_blank" rel="noopener noreferrer" style="color: black;">View her full CV<a></p>
       </div>
     </div>
     <script src="script.js"></script>
