Update contact.html with latest changes

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <style>
-          @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Ubuntu:wght@300&display=swap');
-        </style>
+        <link href='https://fonts.googleapis.com/css?family=EB Garamond' rel='stylesheet'>
         <link rel="shortcut icon" type="image/jpeg" href="4.jpeg">
         <link rel="apple-touch-icon" type="image/jpeg" href="4.jpeg">
         <link rel="stylesheet" href="site.css" />
@@ -18,7 +16,9 @@
       </head>
   <body>
     <div class="header">
-      <h1 class="title">YAERIM GEN KWON</h1>
+      <a href="index.html" class="title-link">
+        <h1 class="title">YAERIM GEN KWON</h1>
+      </a>
       <span class="menu-btn">&#9776;</span>
       <div class="navbar">
         <span class="close-btn">&times;</span>
@@ -60,7 +60,7 @@
       </div>
       <br/>
       <div class="contact-image">
-        <img src="img/5.jpeg" alt="Gen Young Image" width="100%" />
+        <img src="img/5.jpeg" alt="Gen Young Image" width="100%" loading="lazy" />
       </div>
     </div>
     <script src="script.js"></script>
