Added correct path to favicon image

--- a/publications.html
+++ b/publications.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href='https://fonts.googleapis.com/css?family=EB Garamond' rel='stylesheet'>
-        <link rel="shortcut icon" type="image/jpeg" href="4.jpeg">
-        <link rel="apple-touch-icon" type="image/jpeg" href="4.jpeg">
+        <link rel="shortcut icon" type="image/jpeg" href="img/4.jpeg">
+        <link rel="apple-touch-icon" type="image/jpeg" href="img/4.jpeg">
         <link rel="stylesheet" href="site.css" />
         <link
           rel="stylesheet"
