--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,7 @@
               href="https://www.aljazeera.com/news/2016/6/17/moroccos-colonial-heritage-in-higher-education"
               target="_blank"
               rel="noopener noreferrer"
-              >Morocco's colonial heritage in higher education (Al Jazeera)</a
+              >Morocco’s colonial heritage in higher education (Al Jazeera)</a
             >
           </li>
           <li>
@@ -77,6 +77,15 @@
             >
           </li>
           <!-- Add more interviews here -->
+          <li>
+            <a
+              href="https://www.koreaherald.com/view.php?ud=20200730000700"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Yukika’s journey from Japanese actress to K-pop artist (Korea
+              Herald)</a
+            >
+          </li>
         </ul>
       </section>
     </div>
