--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
 
     <div class="contact">
       <div class="contact-info">
-        <p>Gen is available for readings, panels, events, etc.</p>
-        <p>Contact Yaerim (Gen) at yaerim.kwon@gmail.com</p>
+        <p>Yaerim (Gen) is available for readings, panels, events, etc.</p>
+        <p>Contact at yaerim.kwon@gmail.com</p>
 
         <div class="social-icons">
           <a
