--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
         <h2>Fiction</h2>
         <ul class="publication-list">
           <li style="font-style: italic; font-family: 'EB Garamond'; font-size: 20px;">
-            Forthcoming
+            Forthcoming in Reed Magazine
           </li>
         </ul>
       </section>
