--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,9 @@
         <h2>Fiction</h2>
         <ul class="publication-list">
           <li style="font-style: italic; font-family: 'EB Garamond'; font-size: 20px;">
+            Forthcoming in Cream City Review
+          </li>
+            <li style="font-style: italic; font-family: 'EB Garamond'; font-size: 20px;">
             Forthcoming in Reed Magazine
           </li>
         </ul>
