--- a/publications.html
+++ b/publications.html
@@ -34,11 +34,21 @@
       <section class="publication-section">
         <h2>Fiction</h2>
         <ul class="publication-list">
-          <li style="font-style: italic; font-family: 'EB Garamond'; font-size: 20px;">
-            Forthcoming in Cream City Review
+            <li>
+            <a
+              href="https://uwm.edu/creamcityreview/issues/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >"Last Meal" (Cream City Review, Issue 48.1)</a
+            >
           </li>
-            <li style="font-style: italic; font-family: 'EB Garamond'; font-size: 20px;">
-            Forthcoming in Reed Magazine
+          <li>
+            <a
+              href="https://www.reedmag.org/product-page/reed-magazine-issue-157"
+              target="_blank"
+              rel="noopener noreferrer"
+              >"Death as a Writing Prompt" (Reed Magazine, Issue 157)</a
+            >
           </li>
         </ul>
       </section>
