--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
       </div>
       <div class="details">
         <p class="details-paragraph">
-          Yaerim Gen Kwon is a prose writer from Seoul, South Korea. She
-          currently resides in Bloomington, Indiana, where she teaches and
-          studies fiction at Indiana University and serves as the
-          Editor-in-Chief for <i>Indiana Review</i>.
+          Yaerim Gen Kwon Yaerim Gen Kwon is a fiction writer and literary translator from Seoul, South Korea. Her writing appears in <i>Cream City Review<i>, <i>Reed Magazine<i>, <i>Al Jazeera<i>, and elsewhere. She currently resides in Chicago, Illinois, where she is a PhD candidate in Creative Writing at the University of Illinois Chicago. She holds an MFA in Creative Writing from Indiana University Bloomington, where she served as the Editor-in-Chief for <i>Indiana Review<i>. 
         </p>
 
         <p class="details-paragraph">
