--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
               href="https://www.aljazeera.com/news/2016/6/17/moroccos-colonial-heritage-in-higher-education"
               target="_blank"
               rel="noopener noreferrer"
-              >Morocco’s colonial heritage in higher education (Al Jazeera)</a
+              >Morocco’s colonial heritage in higher education (<i>Al Jazeera</i>)</a
             >
           </li>
           <li>
@@ -69,8 +69,8 @@
               href="https://www.koreaherald.com/view.php?ud=20200721000974"
               target="_blank"
               rel="noopener noreferrer"
-              >K-pop album sales remain robust despite pandemic (Korea
-              Herald)</a
+              >K-pop album sales remain robust despite pandemic (<i>Korea
+              Herald</i>)</a
             >
           </li>
           <!-- Add more articles here -->
@@ -85,8 +85,8 @@
               href="https://www.koreaherald.com/view.php?ud=20200904000759"
               target="_blank"
               rel="noopener noreferrer"
-              >Meet Big Hit’s creatives behind BTS-inspired TinyTAN (Korea
-              Herald)</a
+              >Meet Big Hit’s creatives behind BTS-inspired TinyTAN (<i>Korea
+              Herald</i>)</a
             >
           </li>
           <!-- Add more interviews here -->
@@ -95,8 +95,8 @@
               href="https://www.koreaherald.com/view.php?ud=20200730000700"
               target="_blank"
               rel="noopener noreferrer"
-              >Yukika’s journey from Japanese actress to K-pop artist (Korea
-              Herald)</a
+              >Yukika’s journey from Japanese actress to K-pop artist (<i>Korea
+              Herald</i>)</a
             >
           </li>
         </ul>
