--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <p class="details-paragraph">
           Her short story won first prize for Literature in 2022 and her novel
           chapter received the Hegarty Award in 2023 from the National Society
-          of Arts & Letters Competition. She received scholarships and
+          of Arts & Letters Competition. She received various scholarships and
           fellowships from AWP, Carleton College, Indiana University, and New
           York State Summer Writers Institute. In her former life, she worked in
           media in Seoul, San Francisco, and Rabat. She is working on her debut
-          novel titled <i>Upward Mobility</i>.
+          novel.
         </p>
 
         <p class="details-paragraph"> <a href="YaerimGenKwonCV24.pdf" target="_blank" rel="noopener noreferrer" style="color: black;">View her full CV<a></p>
