--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
           of Arts & Letters Competition. She received various scholarships and
           fellowships from AWP, Carleton College, Indiana University, and New
           York State Summer Writers Institute. In her former life, she worked in
-          media in Seoul, San Francisco, and Rabat. She is working on her debut
-          novel.
+          media in Seoul, San Francisco, and Rabat. She is working on her first novel.
         </p>
 
         <p class="details-paragraph"> <a href="YaerimGenKwonCV24.pdf" target="_blank" rel="noopener noreferrer" style="color: black;">View her full CV<a></p>
