--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
               href="https://uwm.edu/creamcityreview/issues/"
               target="_blank"
               rel="noopener noreferrer"
-              >“Last Meal” (<i>Cream City Review</i>, Issue 48.1)</a
+              >Last Meal (<i>Cream City Review</i>, Issue 48.1)</a
             >
           </li>
           <li>
@@ -47,7 +47,7 @@
               href="https://www.reedmag.org/product-page/reed-magazine-issue-157"
               target="_blank"
               rel="noopener noreferrer"
-              >“Death as a Writing Prompt” (<i>Reed Magazine</i>, Issue 157)</a
+              >Death as a Writing Prompt (<i>Reed Magazine</i>, Issue 157)</a
             >
           </li>
         </ul>
