--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="details">
         <p class="details-paragraph">
-          Yaerim Gen Kwon is a fiction writer and literary translator from Seoul, South Korea. Her writing appears in <i>Cream City Review</i>, <i>Reed Magazine</i>, <i>Al Jazeera</i>, and elsewhere. She currently resides in Chicago, Illinois, where she is a PhD candidate in Creative Writing at the University of Illinois Chicago. She holds an MFA in Creative Writing from Indiana University Bloomington, where she served as the Editor-in-Chief for <i>Indiana Review</i>. 
+          Yaerim Gen Kwon is a fiction writer and literary translator from Seoul, South Korea. Her writing appears in <i>Cream City Review</i>, <i>Reed Magazine</i>, <i>Al Jazeera</i>, and elsewhere. She currently resides in Chicago, Illinois, where she is a PhD candidate in Creative Writing at the University of Illinois Chicago. She holds an MFA in Creative Writing from Indiana University Bloomington, where she received the Earle J. S. Ho Award for the Teaching of Creative Writing and served as the Editor-in-Chief for <i>Indiana Review</i>. 
         </p>
 
         <p class="details-paragraph">
