--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
     <div class="contact">
       <div class="contact-info">
-        <p>Yaerim (Gen) is available for readings, panels, workshops, and conversations.</p>
+        <p>Yaerim (Gen) is available for readings, panels, workshops, conversations.</p>
         <p>Contact at yaerim.kwon@gmail.com</p>
 
         <div class="social-icons">
