--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <p class="details-paragraph">
           Her short story won first prize for Literature in 2022 and her novel
-          chapter received the Hegarty Award in 2023 from the National Society
+          chapter received the Hegarty Award in 2023, both from the National Society
           of Arts & Letters Competition. She received various scholarships and
           fellowships from AWP, Carleton College, Indiana University, University of Illinois Chicago, and New
           York State Summer Writers Institute. In her former life, she worked in
