--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
 
         <p class="details-paragraph">
-          Her short story won first prize for Literature in 2022, and her novel chapter received the Hegarty Award in 2023, both awarded by the National Society of Arts & Letters Competition. She received various scholarships and fellowships from AWP, Carleton College, Indiana University, University of Illinois Chicago, and New York State Summer Writers Institute. In her former life, she worked in media in Seoul, San Francisco, and Rabat. She is working on her first novel.
+          Her short story won first prize for Literature in 2022, and her novel chapter received the Hegarty Award in 2023, both from the National Society of Arts & Letters Competition. She has received scholarships and fellowships from Bread Loaf, the New York State Summer Writers Institute, the American Literary Translators Association, and Carleton College, among others. A member of the Third Coast Translators Collective in Chicago, she previously worked in media across Seoul, San Francisco, and Rabat. She is currently working on her first novel and her first full-length novel translation.
         </p>
 
         <p class="details-paragraph"> <a href="YaerimGenKwonCV24.pdf" target="_blank" rel="noopener noreferrer" style="color: black;">View her full CV<a></p>
