--- a/publications.html
+++ b/publications.html
@@ -52,6 +52,21 @@
           </li>
         </ul>
       </section>
+      <br/>      
+        <section class="publication-section">
+        <h2>Translation</h2>
+        <ul class="publication-list">
+          <li>
+            <a
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              >“Posture of Apology” by Yim Hyun (<i>Southern Humanities Review</i>, Forthcoming)</a
+            >
+          </li>
+          <!-- Add more articles here -->
+        </ul>
+      </section>
       <br/>
       <section class="publication-section">
         <h2>Articles</h2>
