--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
               href=""
               target="_blank"
               rel="noopener noreferrer"
-              >Posture of Apology, Yim Hyun (<i>Southern Humanities Review</i>, Forthcoming)</a
+              >Posture of Apology, Lim Hyeon (<i>Southern Humanities Review</i>, Forthcoming)</a
             >
           </li>
           <!-- Add more articles here -->
