--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
       </section>
       <br/>
       <section class="publication-section">
-        <h2>Articles</h2>
+        <h2>Selected Articles</h2>
         <ul class="publication-list">
           <li>
             <a
@@ -93,7 +93,7 @@
       </section>
       <br/>
       <section class="publication-section">
-        <h2>Interviews</h2>
+        <h2>Selected Interviews</h2>
         <ul class="publication-list">
           <li>
             <a
