--- a/publications.html
+++ b/publications.html
@@ -58,10 +58,10 @@
         <ul class="publication-list">
           <li>
             <a
-              href=""
+              href="https://www.southernhumanitiesreview.com/584-posture-of-apology-by-lim-hyeon-translated-by-yaerim-gen-kwon.html"
               target="_blank"
               rel="noopener noreferrer"
-              >Posture of Apology, Lim Hyeon (<i>Southern Humanities Review</i>, Forthcoming)</a
+              >Posture of Apology, Lim Hyeon (<i>Southern Humanities Review</i>, VOLUME 58 No. 4)</a
             >
           </li>
           <!-- Add more articles here -->
