--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
               href="https://www.southernhumanitiesreview.com/584-posture-of-apology-by-lim-hyeon-translated-by-yaerim-gen-kwon.html"
               target="_blank"
               rel="noopener noreferrer"
-              >Posture of Apology, Lim Hyeon (<i>Southern Humanities Review</i>, VOLUME 58 No. 4)</a
+              >Posture of Apology, Lim Hyeon (<i>Southern Humanities Review</i>, Volume 58 No. 4)</a
             >
           </li>
           <!-- Add more articles here -->
